--- a/Index.html
+++ b/Index.html
@@ -40,25 +40,32 @@
           <h1 class="heading-2 hero-heading">
             Empower Your Business With Stunning Design!
           </h1>
+          <div class="text-block hero-description">
+            Circle is a digital design and development studio. We design and
+            develop astonishing websites and mobile apps.
+          </div>
+          <div class="hero-buttons">
+            <a href="#" class="hero-text-button">See our work</a>
+            <a href="#" class="button hero w-button">Get in touch</a>
+          </div>
         </div>
-        <div class="text-block hero-description">
-          Circle is a digital design and development studio. We design and
-          develop astonishing websites and mobile apps.
+        <div class="hero-image">
+          <img
+            class="hero-card-1"
+            src="./project-assets/hero-section/card-1.png"
+            alt="hero-card-1"
+          />
+          <img
+            class="hero-main-card"
+            src="./project-assets/hero-section/hero-image.png"
+            alt="hero-image-main"
+          />
+          <img
+            class="hero-card-2"
+            src="./project-assets/hero-section/card-2.png"
+            alt="hero-card-2"
+          />
         </div>
-        <div class="hero-buttons">
-          <a href="#" class="hero-text-button">See our work</a>
-          <a href="#" class="button primary-button hero w-button"
-            >Get in touch</a
-          >
-        </div>
-      </div>
-      <div class="hero-image">
-        <img src="./project-assets/hero-section/card-1.png" alt="hero-card-1" />
-        <img
-          src="./project-assets/hero-section/hero-image.png"
-          alt="hero-image-main"
-        />
-        <img src="./project-assets/hero-section/card-2.png" alt="hero-card-2" />
       </div>
     </div>
 
@@ -113,7 +120,7 @@
                 <div class="project-content">
                   <div class="project-text">
                     <div class="project-title">Simplify</div>
-                    <div class="project description">
+                    <div class="project-title project description">
                       Ui Design & App Development
                     </div>
                     <a href="#" target="_blank" class="project-link"
@@ -123,8 +130,50 @@
                 </div>
               </div>
             </div>
-
-            <!-- ESPACIO PARA LAS 2 CARTAS RESTANTES POR METODO FLETCH -->
+            <div role="listitem" class="collection-item">
+              <div class="project-card">
+                <div class="project-image">
+                  <img
+                    src="./project-assets/projects-section/2.jpg"
+                    alt="project-2"
+                    class="project-card-image"
+                  />
+                </div>
+                <div class="project-content">
+                  <div class="project-text">
+                    <div class="project-title">Dashcoin</div>
+                    <div class="project-title project description">
+                      Web Development
+                    </div>
+                    <a href="#" target="_blank" class="project-link"
+                      >Learn More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div role="listitem" class="collection-item">
+              <div class="project-card">
+                <div class="project-image">
+                  <img
+                    src="./project-assets/projects-section/3.jpg"
+                    alt="project-3"
+                    class="project-card-image"
+                  />
+                </div>
+                <div class="project-content">
+                  <div class="project-text">
+                    <div class="project-title">Vectorify</div>
+                    <div class="project-title project description">
+                      User Experience Design
+                    </div>
+                    <a href="#" target="_blank" class="project-link"
+                      >Learn More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
