--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
           </li>
         </ul>
         <div class="menu-button">
-          <a href="#" class="button-primary w-button">Contact us</a>
+          <a href="#" class="button-primary">Contact us</a>
         </div>
         <div class="hamburger">
           <span class="bar"></span>
