--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,223 @@
     <link rel="stylesheet" href="projects.css" />
   </head>
   <body>
+    <header>
+      <nav class="container navbar">
+        <a href="#" class="nav-logo"></a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="./Index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Project</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Services</a>
+          </li>
+        </ul>
+        <div class="menu-button">
+          <a href="./Contact.html" class="button-primary w-button"
+            >Contact us</a
+          >
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+
+    <div class="container project-main-card">
+      <div class=>
+        <h1>Simplify</h1>
+        <div class="project-type-wrapper" >
+          <h2>Ui Design & App Development</h2>
+          <div class="project-completion">
+            <div>
+              <p class="project-completed">Completed on</p>
+            </div>
+            <div>
+              <h3 class="project-date">2/2/22</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="project-main-image">
+        <img
+          src="./project-assets/projects-section/1.jpg"
+          alt="project-1"
+          class="project-main-page-image"
+        />
+        <img
+          src="./project-assets/projects-section/1.jpg"
+          alt="project-1"
+          class="project-main-page-image-efect"
+        />
+      </div>
+      <div class="project-detail">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam vero
+          tempora repudiandae aliquid aliquam fugiat est deleniti iure officiis,
+          temporibus sapiente sequi possimus qui earum sed suscipit hic nostrum
+          repellat! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Tempore vero debitis, mollitia fugit accusantium, inventore blanditiis
+          maiores <p>nam molestias modi vel quisquam, est doloribus tenetur corporis magnam
+          ea aperiam consectetur! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Magni quaerat mollitia quod repellat voluptatibus,
+          aut pariatur obcaecati enim molestiae voluptate accusantium! Est
+          debitis nulla veritatis! Delectus pariatur dolores tempora minima.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem earum
+          quidem, veniam sapiente quam quas officiis, eveniet ea possimus
+          impedit ducimus repellendus delectus, iure hic quisquam nihil. Natus,
+          obcaecati aliquid!tempora minima. Lorem ipsum dolor sit amet,
+          consectetur adipisicing</p>
+          
+        </p>
+      </div>
+    </div>
+
+    <div class="section projects">
+      <div class="container projects-container">
+        <h2 class="projects-heading">Other Projects</h2>
+        <div class="collection-list-wrapper">
+          <div role="list" class="collection-list">
+            <div role="listitem" class="collection-item">
+              <div class="project-card">
+                <div class="project-image">
+                  <img
+                    src="./project-assets/projects-section/1.jpg"
+                    alt="project-1"
+                    class="project-card-image"
+                  />
+                </div>
+                <div class="project-content">
+                  <div class="project-text">
+                    <div class="project-title">Simplify</div>
+                    <div class="project-title project-description">
+                      Ui Design & App Development
+                    </div>
+                    <a
+                      href="./projects.html"
+                      target="_blank"
+                      class="project-link"
+                      >Learn More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div role="listitem" class="collection-item">
+              <div class="project-card">
+                <div class="project-image">
+                  <img
+                    src="./project-assets/projects-section/2.jpg"
+                    alt="project-2"
+                    class="project-card-image"
+                  />
+                </div>
+                <div class="project-content">
+                  <div class="project-text">
+                    <div class="project-title">Dashcoin</div>
+                    <div class="project-title project-description">
+                      Web Development
+                    </div>
+                    <a
+                      href="./projects.html"
+                      target="_blank"
+                      class="project-link"
+                      >Learn More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div role="listitem" class="collection-item">
+              <div class="project-card">
+                <div class="project-image">
+                  <img
+                    src="./project-assets/projects-section/3.jpg"
+                    alt="project-3"
+                    class="project-card-image"
+                  />
+                </div>
+                <div class="project-content">
+                  <div class="project-text">
+                    <div class="project-title">Vectorify</div>
+                    <div class="project-title project-description">
+                      User Experience Design
+                    </div>
+                    <a
+                      href="./projects.html"
+                      target="_blank"
+                      class="project-link"
+                      >Learn More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section cta-section">
+      <div class="container container-cta">
+        <h1 class="cta-heading">Do you have any questions?</h1>
+        <div class="cta-subtitle">Let us help you!</div>
+        <div class="form-block w-fom">
+          <form
+            id="email-form"
+            name="email-form"
+            data-name="Email Form"
+            class="cta-form"
+            aria-label="Email Form"
+          >
+            <div class="cta-textfield-wrapper">
+              <div class="textfield-icon"></div>
+              <input
+                type="email"
+                class="text-field w-input"
+                maxlength="256"
+                name="email-2"
+                data-name="Email 2"
+                placeholder="Enter your email"
+                id="email-2"
+                required=""
+              />
+            </div>
+            <input
+              type="submit"
+              value="Suscribe"
+              data-wait="Please wait..."
+              class="button primary-button cta-button w-button"
+            />
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <footer class="section footer">
+      <div class="container footer">
+        <div class="footer-content">
+          <div class="footer-content-logo"></div>
+          <div class="footer-content-address">
+            2972 Westheimer Rd. Santa Ana, Illinois 85486
+          </div>
+        </div>
+        <div class="footer-links">
+          <a href="#" class="footer-link">Team</a>
+          <a href="#" class="footer-link">Services</a>
+          <a href="#" class="footer-link">About Us</a>
+          <a href="#" class="footer-link">Press</a>
+          <a href="#" class="footer-link">Projects</a>
+          <a href="#" class="footer-link">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="./Index.js"></script>
   </body>
 </html>
